# university

./: pec7.c  pec7test.c  test
PAC8/: CMakeLists.txt  PAC8.workspace
PAC8/.codelite/: PAC8-ivan__marin_.tags  PAC8.session  PAC8.tags  refactoring.db
PAC8/PAC8/: PAC8.mk  PAC8.project  PAC8.txt  compile_flags.txt  data.txt  fRide1.txt
PAC8/PAC8/Debug/: PAC8  source_fairgroundRide.c.o.d  source_main.c.o.d
PAC8/PAC8/include/: fairgroundRide.h
PAC8/PAC8/source/: fairgroundRide.c  main.c
PEC7/: readme.md
UOCThemePark_PR2/: Makefile  UOCThemePark.mk  UOCThemePark.project  UOCThemePark.txt  UOCThemePark.workspace  compile_flags.txt  fairgroundRides.txt  managements.txt  visitors.txt
UOCThemePark_PR2/include/: api.h  data.h  fairgroundRide.h  iomenu.h  management.h  menu.h  queue.h  stack.h  test.h  util.h  visitor.h
UOCThemePark_PR2/src/: api.c  fairgroundRide.c  iomenu.c  main.c  management.c  menu.c  queue.c  stack.c  test.c  util.c  visitor.c
fairgroundRideApp/: Makefile  fairgroundRideApp.workspace
fairgroundRideApp/fairgroundRide/: fairgroundRide.mk  fairgroundRide.project  fairgroundRide.txt
fairgroundRideApp/fairgroundRide/Debug/: src_fairgroundRide.c.o.d  src_main.c.o.d
fairgroundRideApp/fairgroundRide/include/: fairgroundRide.h
fairgroundRideApp/fairgroundRide/src/: fairgroundRide.c  main.c
